# liftmips

./: CMakeLists.txt  README.md
include/: entry.hpp
include/liftmips/: decoder.hpp  translator.hpp
scripts/: mips_encode.py
source/: entry.cpp
tests/: CMakeLists.txt  decoder.cpp  translator.cpp
